Revert to java 11